testcases/error/multiple_default_array_literal.veryl
module multiple_default_array_literal {
    let _a: u32[4] = '{default: 0, default: 1};
}
